Oh boy, 2AM: Yes, it is nearly 2AM but the member page is nearly done and there is a form for adding a member. I need sleep.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "app": "^0.1.0",
     "electron": "^1.7.10",
+    "jquery": "^3.2.1",
     "knex": "^0.14.2",
     "sqlite3": "^3.1.13"
   },
@@ -17,7 +18,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Innocent Niyibizi",
   "license": "ISC",
   "description": ""
 }
